--- a/src/components/Navbar/Navbar.astro
+++ b/src/components/Navbar/Navbar.astro
@@ -1,6 +1,6 @@
 ---
 import DropMenus from "./DropMenus.astro"
-
+import DynamicDropDown from './DynamicDropDown'
 ---
 
 <nav class='relative flex items-center justify-between h-14 drop-shadow-md px-20 mx-auto border-b border-slate-300'>
@@ -11,8 +11,9 @@ import DropMenus from "./DropMenus.astro"
       </a>
     </div>
     <div class="hidden pl-20 space-x-10 md:flex">
-      <DropMenus title='First Dropdown' links={['name', 'Other Name', "Harry"]}/>
-      <DropMenus title='Second Dropdown' links={['name', 'Other Name']}/>
+      <DynamicDropDown title='First Dropdown' links={['name', 'Other Name', "Harry"]} client:visible/>
+
+      <DropMenus title='Second Dropdown' links={['Thing 1', 'Thing 2', 'Thing 3', 'Thing 4', 'Thing 5', 'Thing 6']}/>
 
       <a href="#" class="flex flex-row border-b border-transparent items-center w-full px-4 py-4 mt-2 text-base text-left bg-transparent rounded-lg md:w-auto md:inline md:mt-0 md:ml-4 focus:outline-none hover:border-red-300 hover:text-red-300">Item 1</a>
       
@@ -20,63 +21,3 @@ import DropMenus from "./DropMenus.astro"
     </div>
   </div>
 </nav>
-
-<!--
-  Drop Down Ref
-        <nav aria-label="primary" class="relative z-20 flex-col flex-grow hidden pb-4 md:pb-0 md:flex md:justify-end md:flex-row">
-          
-          <div class="relative group">
-              <button class="flex flex-row items-center w-full px-4 py-4 mt-2 text-base font-bold text-left uppercase bg-transparent rounded-lg md:w-auto md:inline md:mt-0 md:ml-4 focus:outline-none font-montserrat">
-                  <span>First Dropdown</span>
-              </button>
-              <div class="absolute z-10 hidden bg-grey-200 group-hover:block">
-                  
-                  <div class="px-2 pt-2 pb-4 bg-white bg-gray-200 shadow-lg">
-                    <div class="grid grid-cols-1 gap-4 md:grid-cols-2">
-                      <p>
-                        dropdown content here
-                      </p>
-                    </div>
-                  </div>
-              </div>
-          </div>  
-          
-          <div class="relative group">
-              <button class="flex flex-row items-center w-full px-4 py-4 mt-2 text-base font-bold text-left uppercase bg-transparent rounded-lg md:w-auto md:inline md:mt-0 md:ml-4 focus:outline-none font-montserrat">
-                  <span>Second Dropdown</span>
-              </button>
-              <div class="absolute z-10 hidden bg-grey-200 group-hover:block">
-                  
-                  <div class="px-2 pt-2 pb-4 bg-white bg-gray-200 shadow-lg">
-                    <div class="grid grid-cols-1 gap-4 md:grid-cols-2">
-                      <p>
-                        dropdown content here
-                      </p>
-                    </div>
-                  </div>
-              </div>
-          </div>   
-        </nav>
-
-  Nav Ref
-  <nav class="relative container bg-gray-100 mx-auto p-6">
-    <div class="flex items-center justify-between">
-      <div class="pt-2">
-        <h1 class="text-lg">DinoFacts</h1>
-      </div>
-      <div class="hidden space-x-6 md:flex">
-        <a href="#" class="rounded-full p-2 px-2 bg-darkRed text-white hover:bg-lightRed">Dino List</a>
-        <a href="#features" class="rounded-full p-2 px-2 bg-darkRed text-white hover:bg-lightRed">Dino Facts</a>
-        <a href="#about-us" class="rounded-full p-2 px-2 bg-darkRed text-white hover:bg-lightRed">About Us</a>
-        <a href="#cta" class="rounded-full p-2 px-2 bg-darkRed text-white hover:bg-lightRed">Contact</a>
-      </div>
-      <div class="hidden md:block">
-        <DinoCardButton client:visible/>
-      </div>
-      
-      <HamburgerMenu client:visible/>
-      
-      
-    </div>
-  </nav> 
--->
