--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,12 @@ import Layout from '../layouts/Layout.astro';
 <Layout title="">
 	<main>
     <Navbar />
-    <Hero />
+    <Hero 
+    title="Sed tristique consectetur eros sed" 
+    description="Vivamus non suscipit lorem. Vivamus pretium, ante nec accumsan ornare, massa lorem bibendum nisl, vitae fermentum."
+    imgSrc="./hero-stand-in.jpg"
+    />
+  
 	</main>
 </Layout>
 
