change text info

--- a/src/components/Navbar/Navbar.astro
+++ b/src/components/Navbar/Navbar.astro
@@ -77,7 +77,7 @@ const cardData = [
   <div class="flex items-center">
     <div class='flex pr-20 mr-auto'>
       <a href="/">
-        Salon Logo
+        Company Logo
       </a>
     </div>
     <div class="hidden pl-20 space-x-10 md:flex">
