--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,7 +9,7 @@ const { title, description, imgSrc} = Astro.props
 <section id='hero'>
   <div class='bg-gray-200 flex flex-col-reverse items-center px-12 mx-auto mt-10 space-y-0 md:space-y-0 md:flex-row'>
     <div class='flex flex-col mb-32 space-y-12 px-8 pt-12 md:w-1/2'>
-      <p class='max-w-lg text-center -mb-8 text-gray-500 md:text-left'>Salon Site</p>
+      <p class='max-w-lg text-center -mb-8 text-gray-500 md:text-left'>Company Name</p>
       <h1 class='max-w-lg text-4xl font-bold text-center md:text-5xl md:text-left'>{title}</h1>
       <p class="max-w-md text-center md:text-left md:text-xl">{description}</p>
     </div>
@@ -18,18 +18,3 @@ const { title, description, imgSrc} = Astro.props
     </div>
   </div>
 </section>
-
-<!-- 
-  <section id='hero'>
-    <div class='container flex flex-col-reverse md:flex-row-items-center px-6 mx-auto mt-10 space-y-0 md:space-y-0'>
-      <div class='flex m-auto flex-col mb-32 space-y-12 md:w-1/2'>
-        <h1 class='flex m-auto max-w-md text-4xl font-bold text-center md:text-5xl md:text-left'>{title}</h1>
-        <p class="flex m-auto max-w-sm text-center md:text-left">{description}</p>
-        <div class="flex m-auto md:1/2">
-          <img src="th.webp"/>
-        </div>
-      </div>
-      
-    </div>
-  </section> 
--->
