change hero image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Layout from '../layouts/Layout.astro';
     <Hero 
     title="Sed tristique consectetur eros sed" 
     description="Vivamus non suscipit lorem. Vivamus pretium, ante nec accumsan ornare, massa lorem bibendum nisl, vitae fermentum."
-    imgSrc="./hero-stand-in.jpg"
+    imgSrc="./hero-stand-in.svg"
     />
     <div class="">
       <BodyCard 
