adjust color styling

--- a/src/components/Navbar/DropMenus.astro
+++ b/src/components/Navbar/DropMenus.astro
@@ -7,7 +7,7 @@ const { title, links } = Astro.props;
 const twoCols = (links[3] != null ? true : false)
 ---
 <div class="relative group">
-  <button class="flex flex-row border-b border-transparent items-center w-full px-4 py-4 mt-2 text-base text-left bg-transparent rounded-lg md:w-auto md:inline md:mt-0 md:ml-4 focus:outline-none hover:border-red-300 hover:text-red-300">
+  <button class="flex flex-row border-b border-transparent items-center w-full px-4 py-4 mt-2 text-base text-left bg-transparent rounded-lg md:w-auto md:inline md:mt-0 md:ml-4 focus:outline-none hover:border-highlightRed hover:text-highlightRed">
       <span>{title}</span>
   </button>
   <div class="absolute z-10 hidden bg-grey-200 group-hover:block">
@@ -19,7 +19,7 @@ const twoCols = (links[3] != null ? true : false)
               return (
                   <li>
                     <div class="">
-                      <a href="/" class="flex flex-row mr-6 p-2 border-b border-transparent hover:border-red-300 hover:text-red-300">
+                      <a href="/" class="flex flex-row mr-6 p-2 border-b border-transparent hover:border-highlightRed hover:text-highlightRed">
                         <span>{link}</span>
                       </a>
                     </div>
