--- a/src/components/Navbar/Navbar.astro
+++ b/src/components/Navbar/Navbar.astro
@@ -73,9 +73,9 @@ const cardData = [
   
 ---
 
-<nav class='relative flex items-center justify-between h-14 drop-shadow-md px-20 mx-auto border-b border-slate-300'>
-  <div class="flex items-center">
-    <div class='flex pr-20 mr-auto'>
+<nav class='relative flex md:items-center justify-between h-14 drop-shadow-md px-20 mx-auto border-b border-slate-300'>
+  <div class="-ml-16 flex">
+    <div class='pt-3 pr-12 md:pt-4'>
       <a href="/">
         Company Logo
       </a>
@@ -86,9 +86,9 @@ const cardData = [
 
       <DropMenus title='Second Dropdown' links={['Thing 1', 'Thing 2', 'Thing 3', 'Thing 4', 'Thing 5', 'Thing 6']}/>
 
-      <a href="#" class="flex flex-row border-b border-transparent items-center w-full px-4 py-4 mt-2 text-base text-left bg-transparent rounded-lg md:w-auto md:inline md:mt-0 md:ml-4 focus:outline-none hover:border-red-300 hover:text-red-300">Item 1</a>
+      <a href="#" class="flex flex-row border-b border-transparent items-center w-full px-4 py-4 mt-2 text-base text-left bg-transparent rounded-lg md:w-auto md:inline md:mt-0 md:ml-4 focus:outline-none hover:border-highlightRed hover:text-highlightRed">Item 1</a>
       
-      <a href="#" class="flex flex-row border-b border-transparent items-center w-full px-4 py-4 mt-2 text-base text-left bg-transparent rounded-lg md:w-auto md:inline md:mt-0 md:ml-4 focus:outline-none hover:border-red-300 hover:text-red-300">Item 2</a>
+      <a href="#" class="flex flex-row border-b border-transparent items-center w-full px-4 py-4 mt-2 text-base text-left bg-transparent rounded-lg md:w-auto md:inline md:mt-0 md:ml-4 focus:outline-none hover:border-highlightRed hover:text-highlightRed">Item 2</a>
     </div>
   </div>
 </nav>
