--- a/src/components/BodyCard.astro
+++ b/src/components/BodyCard.astro
@@ -10,11 +10,11 @@ export interface Props{
 const { title, header, description, imgSrc, links, listItems} = Astro.props
 ---
 <section id={title} class="">
-  <div class='container flex flex-col-reverse items-center pt-12 px-12 mx-auto mt-10 space-y-0 md:flex-row md:space-y-0'>
+  <div class='flex flex-col-reverse items-center pt-12 md:px-12 mx-auto mt-10 space-y-0  md:flex-row md:space-y-0'>
     <div class='flex flex-col mb-20 space-y-4 px-8 pt-12 md:w-1/2'>
-      <p class="max-w-lg text-center -mb-2 text-gray-500 md:text-left">{title}</p>
-      <h1 class='max-w-lg text-4xl font-bold text-center md:text-5xl md:text-left'>{header}</h1>
-      <p class="max-w-md text-center md:text-left md:text-xl">{description}</p>
+      <p class="max-w-lg  -mb-2 text-gray-500 text-left">{title}</p>
+      <h1 class='max-w-lg text-4xl font-bold md:text-5xl text-left'>{header}</h1>
+      <p class="max-w-md text-left md:text-xl">{description}</p>
       {
         listItems ?
         <ul class="list-disc list-inside">
@@ -32,9 +32,9 @@ const { title, header, description, imgSrc, links, listItems} = Astro.props
         {links.map(link => {
           return(
           <li>
-            <a href="/" class="flex flex-row mr-6 p-2 border-b border-transparent text-red-400 hover:border-red-300 md:w-1/2">
+            <a href="/" class="flex flex-row mr-6 p-2 border-b border-transparent text-highlightRed hover:border-highlightRed md:w-1/2">
               {link}
-              <div class="pt-2 px-2 text-red-400">
+              <div class="pt-2 px-2 text-highlightRed">
                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="10" viewBox="0 0 24 24"><path fill="#EF7D7D" d="M6 0l12 12-12 12z"/></svg>
               </div>
             </a>
