add buttons card

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import BodyCard from '../components/BodyCard.astro';
+import ButtonsCard from '../components/ButtonsCard.astro';
 import Hero from '../components/Hero.astro';
 import Navbar from '../components/Navbar/Navbar.astro';
 import Layout from '../layouts/Layout.astro';
@@ -51,6 +52,9 @@ import Layout from '../layouts/Layout.astro';
       imgSrc="./animeWoman.svg"
       links={['Aliquam Ac Libero']}
       listItems={['Etiam venenatis libero elit vel', 'Aliquam tincidunt, lorem vitae', 'Cras ac eros in']}
+    />
+    <ButtonsCard 
+      buttonNames={['In accumsan', 'Pellentesque', 'Quisque', 'Pellentesque congue', 'Nullam', 'Proin vitae', 'Aliquam', 'Euismod', 'Nullam', 'In accumsan', 'Proin vitae', 'Pellentesque congue']}
     />
 	</main>
 </Layout>
