--- a/src/components/ButtonsCard.astro
+++ b/src/components/ButtonsCard.astro
@@ -6,7 +6,7 @@ const { buttonNames } = Astro.props
 ---
 <section id="buttons">
   <div class=" flex flex-col justify-center md:flex-row">
-    <h1 class="text-3xl font-bold">Sed Ac Lorem</h1>
+    <h1 class="text-3xl font-bold">Sed c Lorem</h1>
   </div>
   <div class="container mt-12 mx-auto grid grid-cols-1 md:grid-cols-6">
     {buttonNames.map(buttonName => {
