--- a/src/components/BodyCard.astro
+++ b/src/components/BodyCard.astro
@@ -10,7 +10,7 @@ export interface Props{
 const { title, header, description, imgSrc, links, listItems} = Astro.props
 ---
 <section id={title} class="">
-  <div class='flex flex-col-reverse items-center pt-12 md:px-12 mx-auto mt-10 space-y-0  md:flex-row md:space-y-0'>
+  <div class='w-full h-full flex flex-col-reverse space-x-6 items-center pt-12 mx-auto mt-10 space-y-0 md:px-12  md:flex-row md:space-y-0'>
     <div class='flex flex-col mb-20 space-y-4 px-8 pt-12 md:w-1/2'>
       <p class="max-w-lg  -mb-2 text-gray-500 text-left">{title}</p>
       <h1 class='max-w-lg text-4xl font-bold md:text-5xl text-left'>{header}</h1>
@@ -47,8 +47,8 @@ const { title, header, description, imgSrc, links, listItems} = Astro.props
       
       
     </div>
-    <div class="md:px-60 md:w-1/2 ">
-      <img src={imgSrc}/>
+    <div class="flex flex-grow justify-center h-auto">
+      <img class=" " src={imgSrc}/>
     </div>
   </div>
 </section>
