--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,13 +7,13 @@ export interface Props{
 const { title, description, imgSrc} = Astro.props
 ---
 <section id='hero'>
-  <div class='bg-gray-200 flex flex-col-reverse items-center md:px-12 mx-auto mt-10 space-y-0 md:space-y-0 md:flex-row'>
-    <div class='flex flex-col mb-32 space-y-12 px-8 pt-12 md:w-1/2'>
+  <div class='bg-gray-200 flex flex-col-reverse items-center mx-auto mt-10 space-y-0 md:space-y-0 md:flex-row'>
+    <div class='flex flex-col my-16 space-y-12 px-8 pt-12 md:w-1/2'>
       <p class='max-w-lg -mb-8 text-gray-500 text-left'>Company Name</p>
       <h1 class='max-w-lg text-4xl font-bold md:text-5xl text-left'>{title}</h1>
       <p class="max-w-md md:text-left text-xl">{description}</p>
     </div>
-    <div class="w-full md:w-1/4">
+    <div class="w-full flex justify-center md:w-1/2 xl:w-1/4">
       <img src={imgSrc}/>
     </div>
   </div>
