adjust navbar styling

--- a/src/components/Navbar/Navbar.astro
+++ b/src/components/Navbar/Navbar.astro
@@ -73,7 +73,7 @@ const cardData = [
   
 ---
 <!-- relative flex h-14 drop-shadow-md px-20 mx-auto border-b border-slate-300 md:items-center -->
-<nav class='bg-gray-200 drop-shadow-md h-14'>
+<nav class='bg-gray-200 drop-shadow-md h-14 md:h-28 xl:h-14'>
   <div class="flex flex-row md:flex-col xl:flex-row">
       <a class='left-0 flex flex-cols-2 gap-x-0 m-1' href="/">
         <img class="w-12 ml-2 rounded-md" src='./logo.png'/>
