adjust buttonscard styling

--- a/src/components/ButtonsCard.astro
+++ b/src/components/ButtonsCard.astro
@@ -5,16 +5,16 @@ export interface Props{
 const { buttonNames } = Astro.props
 ---
 <section id="buttons">
-  <div class=" flex flex-col justify-center md:flex-row">
+  <div class="text-center flex flex-col mt-20 justify-center md:flex-row">
     <h1 class="text-3xl font-bold">Sed c Lorem</h1>
   </div>
-  <div class="container mt-12 mx-auto grid grid-cols-1 md:grid-cols-6">
+  <div class="container mt-6 mx-auto grid grid-cols-1 md:grid-cols-6">
     {buttonNames.map(buttonName => {
       return(
         <a href="/" class="mt-4 flex items-center m-auto">
           
           <button class="flex items-center ">
-            <div class="m-auto  py-2 w-40 border border-slate-300 rounded-lg hover:bg-slate-200">
+            <div class="m-auto  py-2 w-40 border border-highlightRed rounded-lg hover:bg-highlightRed hover:text-white">
               <p>{buttonName}</p>
             </div>
           </button>
