--- a/src/components/BodyCard.astro
+++ b/src/components/BodyCard.astro
@@ -10,11 +10,11 @@ export interface Props{
 const { title, header, description, imgSrc, links, listItems} = Astro.props
 ---
 <section id={title} class="">
-  <div class='w-full h-full flex flex-col-reverse space-x-6 items-center mx-auto mt-40 space-y-0 md:px-12  md:flex-row md:space-y-0'>
-    <div class='flex flex-col space-y-4 px-8  md:w-1/2'>
-      <p class="max-w-lg  -mb-2 text-gray-500 text-left">{title}</p>
-      <h1 class='max-w-lg text-4xl font-bold md:text-5xl text-left'>{header}</h1>
-      <p class="max-w-md text-left md:text-xl">{description}</p>
+  <div class='w-full h-full flex flex-col-reverse space-x-6 items-center mx-auto mt-40 space-y-0 lg:px-12  md:flex-row md:space-y-0'>
+    <div class=' flex flex-col space-y-4 px-8 md:w-1/2'>
+      <p class=" max-w-lg  -mb-2 text-gray-500 text-left">{title}</p>
+      <h1 class=' text-4xl font-bold md:text-5xl text-left'>{header}</h1>
+      <p class="text-left md:text-xl">{description}</p>
       {
         listItems ?
         <ul class="list-disc list-inside">
@@ -32,7 +32,7 @@ const { title, header, description, imgSrc, links, listItems} = Astro.props
         {links.map(link => {
           return(
           <li>
-            <a href="/" class="flex flex-row mr-6 p-2 border-b border-transparent text-highlightRed hover:border-highlightRed md:w-1/2">
+            <a href="/" class="flex flex-row mr-6 border-b border-transparent text-highlightRed hover:border-highlightRed md:w-1/2">
               {link}
               <div class="pt-2 px-2 text-highlightRed">
                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="10" viewBox="0 0 24 24"><path fill="#EF7D7D" d="M6 0l12 12-12 12z"/></svg>
