--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import ButtonsCard from '../components/ButtonsCard.astro';
 import Hero from '../components/Hero.astro';
 import Navbar from '../components/Navbar/Navbar.astro';
 import Layout from '../layouts/Layout.astro';
-import Form from '../components/Form/Form'
+import SignupButton from '../components/SignupButton'
 import Footer from '../components/Footer.astro';
 import VideoPlayer from '../components/VideoPlayer';
 
@@ -83,8 +83,8 @@ const FOOTER_DATA = [
     <ButtonsCard 
       buttonNames={['In accumsan', 'Pellentesque', 'Quisque', 'Pellentesque congue', 'Nullam', 'Proin vitae', 'Aliquam', 'Euismod', 'Nullam', 'In accumsan', 'Proin vitae', 'Pellentesque congue']}
     />
-    <div class="flex justify-center">
-        <Form isPopup={false} client:visible/>
+    <div class="flex justify-center mt-24">
+      <SignupButton client:visible/>
     </div>
     
     <Footer lists={FOOTER_DATA}/>
