--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,6 @@
 ---
+import SignupButton from './SignupButton'
+
 export interface Props{
   title: string;
   description: string;
@@ -12,6 +14,9 @@ const { title, description, imgSrc} = Astro.props
       <p class='max-w-lg -mb-8 text-gray-500 text-left'>Company Name</p>
       <h1 class='max-w-lg text-4xl font-bold md:text-5xl text-left'>{title}</h1>
       <p class="max-w-md md:text-left text-xl">{description}</p>
+      <div class="flex justify-center md:justify-start">
+        <SignupButton client:visible/>
+      </div>
     </div>
     <div class="w-1/2 flex justify-center md:w-1/2 lg:w-1/3 xl:w-1/4">
       <img src={imgSrc}/>
